--- a/stylesheets/styling.css
+++ b/stylesheets/styling.css
@@ -1,6 +1,12 @@
 .root{
-    -fx-font-size: 16pt;
+    -fx-font-size: 14px;
     -fx-font-family: "Courier New";
-    -fx-base: rgb(132, 145, 47);
-    -fx-background: rgb(225, 228, 203);
+    -fx-base: rgb(255, 255, 255);
+    -fx-background: rgb(0, 191, 255);
+    
 }
+
+HBox, VBox {
+	-fx-alignment: center;
+}
+
